@@ -131,6 +131,12 @@ namespace scene
 		//! returns normal of vertex i
 		virtual core::vector3df& getNormal(u32 i) = 0;
 
+		//! returns texture coord of vertex i
+		virtual const core::vector2df& getTCoords(u32 i) const = 0;
+
+		//! returns texture coord of vertex i
+		virtual core::vector2df& getTCoords(u32 i) = 0;
+
 		//! Append the vertices and indices to the current buffer
 		/** Only works for compatible vertex types.
 		\param vertices Pointer to a vertex array.
